# ixentbench-ixentlabs

./: .gitignore  GAME_RULES_vARENA.html  GAME_RULES_vSOLO.html  LICENSE  MANIFEST.in  README.html  README.md  __init__.py  arena.py  auth.py  install.py  play.py  pyproject.toml
ixentbench/: SYSTEM_PROMPT_vREFERENCE.html  __init__.py  agent_template.py  auth.py  cli.py  config.py  engines.py  env_configuration.html
